--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "date-fns": "^2.29.1",
+    "v-calendar": "^2.4.1",
+    "vue": "^2.6.14",
+    "vue-functional-calendar": "^2.9.96",
+    "vue2-datepicker": "^3.11.0",
+    "vue2-daterange-picker": "^0.6.8"
   },
   "devDependencies": {
+    "@types/vue2-datepicker": "^3.3.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -24,6 +30,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-cli": "^4.10.0"
   }
 }
